[package]
name = "acroguess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.19"
colorful = "0.2.1"
serde = { version = "1.0.138", features = ["derive"] } # for parsing json and to access its serialise/deserialise macros
reqwest = { version = "0.11.11", features = ["blocking", "json"] } # high-level http client to fetch json


